@@ -1,5 +1,7 @@
 1.5.0
    - bug [12690] "Buildconfig.py køres ikke ved ant dist_datadock"
+   added config_py to dist_* targets depend lists, removed clean and config_py from compile target
+   - bug [12690] "Buildconfig.py køres ikke ved ant dist_datadock"
    compile target in build.xml now depends on clean and config_py
    - bug [11290] "Bør vi ikke renavngive MetaData.java til IMetaData.java?"
    - bug [12582] "Datadock skal kunne prioritere pakker fra ES"
